Kelsey Development Sandbox/src/objects/Strategic_Reports__c.object
<CustomObject>
    <fields>
        <fullName>Age_Current_Age__c</fullName>
        <formula>Client__r.CURRENT_AGE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Current Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Enrolled__c</fullName>
        <formula>Client__r.AGE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Enrolled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Group_0_4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Age Group 0 4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_Group_10_12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Age Group 10 12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_Group_13_17__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Age Group 13 17</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_Group__c</fullName>
        <label>Age Group</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <formula>Client__r.CENTER__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Strategic Reports</relationshipLabel>
        <relationshipName>Strategic_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Clinician__c</fullName>
        <formula>Client__r.Clinician__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clinician</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateEnd__c</fullName>
        <label>DateEnd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateStart__c</fullName>
        <label>DateStart</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Earliest__c</fullName>
        <label>Date Earliest</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Latest__c</fullName>
        <label>Date Latest</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethnic_Group__c</fullName>
        <label>Ethnic Group</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity_Hispanic_or_Latino__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ethnicity Hispanic or Latino</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethnicity_Missing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ethnicity Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethnicity_Non_Hispanic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ethnicity Non Hispanic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethnicity_Refused_or_Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ethnicity Refused or Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender_Female__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gender Female</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender_Identity__c</fullName>
        <label>Gender Identity</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Male__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gender Male</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender_Missing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gender Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gender Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender_Refused_or_Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gender Refused or Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender_Transgender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gender Transgender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Military_Associated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Military Associated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Military_Missing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Military Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race_American_Indian_or_Alaskan_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Race American Indian or Alaskan Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race_Asian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Race Asian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race_Black_African_American__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Race Black African American</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race_Multiracial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Race Multiracial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race_Native_Hawaiian_or_Pacific_Islander__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Race Native Hawaiian or Pacific Islander</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race_Refused_or_Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Race Refused or Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race_White__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Race White</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Clinical_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Treatment Clinical Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treatment_Completed_as_Planned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Treatment Completed as Planned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treatment_Ended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Treatment Ended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treatment_Missing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Treatment Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treatment_Receiving_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Treatment Receiving Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treatment_of_a_New_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Treatment of a New Client</label>
        <type>Checkbox</type>
    </fields>
    <label>Strategic Reports</label>
    <nameField>
        <label>Strategic Reports Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>